# rd_quad_testing

./: README.md  pyproject.toml
src/rd_quad_testing/: __init__.py
src/rd_quad_testing/robot/: Quadruped.xml  quad_constants.py
src/rd_quad_testing/robot/meshes/: Crescent-Hip-Mount-Version-v3-1.stl  GO-M8010-6-v3-7.stl  Hex-Shaft-Coupler-v2-2.stl  Leg-Left-Thigh-v3-1.stl  Leg-Right-Thigh-v3-1.stl  Luis-Side-Body-Panel-v2.stl  Mounting-Plate-v2.stl  Shin-v3-2.stl  Thigh-Shoulder-Cap-v3-1.stl  WCP-0783-v3-2.stl  WCP-0991-v4-1.stl  WCP-30T-v3.stl
src/rd_quad_testing/tasks/: __init__.py  quad_stand_env_cfg.py  rl_cfg.py
src/rd_quad_testing/tasks/stand/: quad_stand_env_cfg.py  rl_cfg.py
src/rd_quad_testing/tasks/velocity/: quad_velocity_env_cfg.py  rl_cfg.py
