[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "rd-quad-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marco Hu"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "mjlab",
    "torch"
]

[project.entry-points."mjlab.tasks"]
rd_quad_testing = "rd_quad_testing.tasks"

[tool.ruff]
src = ["src"]
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
